editing text on we gotchu features

--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-8 col-sm-offset-2 text-center margin-30 wow fadeIn" data-wow-delay="0.6s">
-            <h2>What is GotchU?</h2>
-            <p class="lead">The easiest way to cure hangryness. We find the best restaurant for you based on your preferences.
-                  No more scouring through reviews and searching the web. We GotchU! Coming soon to iOS and Android.</p>
+            <h2>We GotchU</h2>
+            <p class="lead">GotchU is the easiest way to cure hangryness. We find the best restaurant for you based on your preferences.
+                  No more scouring through reviews and searching the web. Coming soon to iOS and Android.</p>
           </div>
         </div>
 
