--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>GotchU | the easiest way to cure hangryness </title>
   <meta name="keywords" content="">
   <meta name="description" content="">
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
   <meta property="og:title" content="">
