changing logo and fixing images for eurekafest and startup weekend

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="row header-info">
           <div class="col-sm-10 col-sm-offset-1 text-center">
             <!-- <h1 class="wow fadeIn">GotchU</h1> -->
-            <img id = "gotchu-logo" src="img/gotchu-logo.png" alt="Logo">
+            <img id = "gotchu-logo" src="img/Logo2.svg" alt="Logo">
             <br />
             <!-- <p class="lead wow fadeIn" data-wow-delay="0.5s">The easiest way to cure hangryness. We find the best restaurant for you based on your preferences.  <br/> No more scouring through reviews and searching the web. We GotchU!</p> -->
             <br />
