editing size of social media icons

--- a/index.html
+++ b/index.html
@@ -222,9 +222,9 @@
           <div class="col-sm-8 margin-20">
             <ul class="list-inline social">
               <li>Connect with us on</li>
-              <li><a href="http://www.twitter.com/_gotchuapp"><i class="fa fa-twitter"></i></a></li>
-              <li><a href="http://www.facebook.com/GotchuApp"><i class="fa fa-facebook"></i></a></li>
-              <li><a href="http://www.instagram.com/GotchuApp"><i class="fa fa-instagram"></i></a></li>
+              <li><a href="http://www.twitter.com/_gotchuapp"><i class="fa fa-twitter fa-2x"></i></a></li>
+              <li><a href="http://www.facebook.com/GotchuApp"><i class="fa fa-facebook fa-2x"></i></a></li>
+              <li><a href="http://www.instagram.com/GotchuApp"><i class="fa fa-instagram fa-2x"></i></a></li>
             </ul>
           </div>
 
