--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/main.css">
+  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="img/favicon.ico" type="image/x-icon">
 
   <script src="js/modernizr-2.7.1.js"></script>
 
