--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                     <form action="//twitter.us15.list-manage.com/subscribe/post?u=16fa93c132fe1d65b6858ea34&amp;id=9ed7fa85c5" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                        <div id="mc_embed_signup_scroll">
                         <!-- <label for="mce-EMAIL">Hungry for more?</label> -->
-                        <input type="email" style="margin-left: 20%;" value="" name="EMAIL" class="email form-control" id="mce-EMAIL" placeholder="Enter Email" required>
+                        <input type="email" style="width: 100%;" value="" name="EMAIL" class="email form-control" id="mce-EMAIL" placeholder="Enter Email" required>
                        <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                        <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_16fa93c132fe1d65b6858ea34_9ed7fa85c5" tabindex="-1" value=""></div>
                        <div class="clear"><input class = "btn btn-primary btn-lg" type="submit" value="Request Invite" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
