changing padding on sections to save space

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"><head>
   <meta charset="utf-8">
-  <title>GotchU | the easiest way to cure hangryness </title>
+  <title>GotchU | the solution for indecisive diners </title>
   <meta name="keywords" content="">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -107,7 +107,7 @@
       </div>
     </section>
 
-    <section id="main-info" class="pad-xl">
+    <section id="main-info" class="pad-lg">
 	    <div class="container">
 		    <div class="row">
 			    <div class="col-sm-4 wow fadeIn" data-wow-delay="0.4s">
@@ -130,8 +130,8 @@
     </section>
 
 
-    <!--Pricing-->
-    <section id="pricing" class="pad-lg">
+    <!--About Us-->
+    <section id="pricing" class="pad-sm">
       <div class="container">
         <div class="row margin-40">
           <div class="col-sm-8 col-sm-offset-2 text-center">
@@ -145,7 +145,7 @@
     </section>
 
 
-    <section id="invite" class="pad-lg light-gray-bg">
+    <section id="invite" class="pad-sm light-gray-bg">
       <div class="container">
         <div class="row">
           <div class="col-sm-8 col-sm-offset-2 text-center">
@@ -202,7 +202,7 @@
           </div>
         </div>
 
-        <div class="row margin-30 news-container">
+        <!-- <div class="row margin-30 news-container">
           <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 wow fadeInLeft" data-wow-delay="1.2s">
             <a href="http://www.eurekaon.com/fest.html" target="_blank">
             <img class="news-img pull-left" src="img/eureka-fest.png" alt="EurekaFest">
@@ -210,7 +210,7 @@
             <small><em>Eureka Building, Irvine, CA - April 8, 2017</em></small></p>
             </a>
           </div>
-        </div>
+        </div> -->
 
       </div>
     </section>
