removing i-phone and replacing with video. editing text. new minified css.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/main.min.css">
+  <!-- <link rel="stylesheet" href="css/main.min.css"> -->
   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
   <link rel="icon" href="img/favicon.ico" type="image/x-icon">
 
@@ -91,23 +92,24 @@
 				<div class="scroll"></div>
 			</div>
 
-    <section id="be-the-first" class="pad-xl">
+    <section id="be-the-first" class="pad-xs">
       <div class="container">
         <div class="row">
           <div class="col-sm-8 col-sm-offset-2 text-center margin-30 wow fadeIn" data-wow-delay="0.6s">
-            <h2>We GotchU</h2>
-            <p class="lead">GotchU is the easiest way to cure hangryness. We find the best restaurant for you based on your preferences.
+            <h2 class ="video-sum">We GotchU</h2>
+            <p class="lead video-sum">GotchU is the easiest way to cure hangryness. We find the best restaurant for you based on your preferences.
                   No more scouring through reviews and searching the web. Coming soon to iOS and Android.</p>
           </div>
         </div>
 
         <div class="iphone wow fadeInUp" data-wow-delay="1s">
-	        <img src="img/iphone2.png">
+	        <!-- <img src="img/iphone2.png"> -->
+          <iframe class = "gotchu-vid" width="560" height="315" src="https://www.youtube.com/embed/ITPKpdafhX8" frameborder="0" allowfullscreen></iframe>
         </div>
       </div>
     </section>
 
-    <section id="main-info" class="pad-lg">
+    <section id="main-info" class="pad-xs">
 	    <div class="container">
 		    <div class="row">
 			    <div class="col-sm-4 wow fadeIn" data-wow-delay="0.4s">
