--- a/index.html
+++ b/index.html
@@ -26,6 +26,18 @@
 
   <script src="js/modernizr-2.7.1.min.js"></script>
 
+  <!-- Google analytics below-->
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-93189003-1', 'auto');
+  ga('send', 'pageview');
+
+  </script>
+
 </head>
 
 <body>
@@ -161,23 +173,68 @@
               <div class="col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
                 <form role="form">
                   <div class="form-group">
-                    <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
+                    <!-- Begin MailChimp Signup Form -->
+                    <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+                    <style type="text/css">
+                      #mc_embed_signup{clear:left; }
+                      /*/ Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+                      We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. /*/
+                    </style>
+                      <div id="mc_embed_signup">
+                        <form action="//gotchuapp.us15.list-manage.com/subscribe/post?u=16fa93c132fe1d65b6858ea34&amp;id=9ed7fa85c5" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                        <div id="mc_embed_signup_scroll">
+                          <div class="indicates-required"><span class="asterisk"></span>* indicates required</div>
+                          <div class="mc-field-group">
+                            <label for="mce-EMAIL">Email Address <span class="asterisk">*</span></label>
+                            <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+                          </div>
+                          <div class="mc-field-group">
+                            <label for="mce-FNAME">First Name <span class="asterisk"></span>
+                            </label>
+                            <input type="text" value="" name="FNAME" class="required" id="mce-FNAME">
+                          </div>
+                          <div class="mc-field-group">
+                            <label for="mce-LNAME">Last Name <span class="asterisk"></span></label>
+                            <input type="text" value="" name="LNAME" class="required" id="mce-LNAME">
+                          </div>
+                          <div id="mce-responses" class="clear">
+                            <div class="response" id="mce-error-response" style="display:none"></div>
+                            <div class="response" id="mce-success-response" style="display:none"></div>
+                          </div>
+                          <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                          <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_16fa93c132fe1d65b6858ea34_9ed7fa85c5" tabindex="-1" value="">
+                          </div>
+                          <div class="clear">
+                            <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-primary btn-lg button" style="background-color:#31336c; color: #ffffff;">
+                          </div>
+                        </div>
+                      </form>
+                    </div>
+                    <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'>
+                    </script>
+                    <script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);
+                    </script>
+                  <!--End mc_embed_signup-->
+
+                  <!-- BEGIN MAILCHIMP FORM -->
+                    <!-- <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
                     <style type="text/css">
                         #mc_embed_signup{ clear:left; }
                         /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
                            We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-                    </style>
-                    <div id="mc_embed_signup">
-                    <form action="//twitter.us15.list-manage.com/subscribe/post?u=16fa93c132fe1d65b6858ea34&amp;id=9ed7fa85c5" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                       <div id="mc_embed_signup_scroll">
+                    </style> -->
+                    <!-- <div id="mc_embed_signup"> -->
+                    <!-- <form action="//twitter.us15.list-manage.com/subscribe/post?u=16fa93c132fe1d65b6858ea34&amp;id=9ed7fa85c5" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate> -->
+                       <!-- <div id="mc_embed_signup_scroll"> -->
                         <!-- <label for="mce-EMAIL">Hungry for more?</label> -->
-                        <input type="email" style="width: 100%;" value="" name="EMAIL" class="email form-control" id="mce-EMAIL" placeholder="Enter Email" required>
+                        <!-- <input type="email" style="width: 100%;" value="" name="EMAIL" class="email form-control" id="mce-EMAIL" placeholder="Enter Email" required> -->
                        <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                       <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_16fa93c132fe1d65b6858ea34_9ed7fa85c5" tabindex="-1" value=""></div>
+                       <!-- <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_16fa93c132fe1d65b6858ea34_9ed7fa85c5" tabindex="-1" value=""></div>
                        <div class="clear"><input class = "btn btn-primary btn-lg" type="submit" value="Request Invite" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
                        </div>
                     </form>
-                    </div>
+                    </div> -->
+                  <!-- END MAILCHIMP FORM -->
                     <!-- <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter Email"> -->
                   </div>
                   <!-- <button type="submit" class="btn btn-primary btn-lg">Request Invite</button> -->
