editing text in about me and integrations sections

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 			    <div class="col-sm-4 wow fadeIn" data-wow-delay="1.2s">
 				    <hr  class="line yellow">
 				    <h3>Convenient Integrations</h3>
-				    <p>Connects directly to Google Maps for directions. Planning a date? Easily make a res with Open Table. Ordering take-out? Integrated with Seamless and GrubHub.  Need a Lyft? We GotchU covered.</p>
+				    <p>Need a ride? Planning a date? Ordering take-out? Our team has GotchU covered. Conveniently choose between your favorite method of transportation, reserve your spot, and/or simply just sit back, relax, and let the food come to you!</p>
 			    </div>
 		    </div>
 	    </div>
@@ -150,7 +150,7 @@
         <div class="row margin-40">
           <div class="col-sm-8 col-sm-offset-2 text-center">
             <h2 class="white">About Us</h2>
-            <p class="white">We are a team of technology enthusiasts and food lovers from Southern California. Just like you, we have busy lives and a big appetite. We spent too much time scouring through reviews, asking around for recommendations and convincing that one stubborn or indecisive friend to just pick a place already. We've got a solution and want to share it with you. </p>
+            <p class="white"> We are a team of passionate tech enthusiasts with a love of food. Just like you, we have busy lives with big appetites. Here at GotchU, we understand the value of your time and are dedicated to giving it back to you. That’s why instead of wasting time scouring through endless reviews for the best spot to eat, we’ve GotchU covered so you can get back to what you do best, simply enjoying life!</p>
             <p class = "white">We'd love to hear from you! Email us at <a href="mailto:hello@gotchuapp.co">hello@gotchuapp.co</a>
           </div>
         </div>
