--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
 
   <link rel="stylesheet" href="css/bootstrap.min.css">
+  <!-- <link rel="stylesheet" href="css/main.css"> -->
   <link rel="stylesheet" href="css/main.min.css">
-  <!-- <link rel="stylesheet" href="css/main.min.css"> -->
   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
   <link rel="icon" href="img/favicon.ico" type="image/x-icon">
 
