--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
   <link rel="icon" href="img/favicon.ico" type="image/x-icon">
 
-  <script src="js/modernizr-2.7.1.min.js"></script>
+  <script src="js/modernizr-2.7.1-min.js"></script>
 
   <!-- Google analytics below-->
   <script>
