changing features section to simple 1-2-3 steps

--- a/index.html
+++ b/index.html
@@ -126,18 +126,18 @@
 		    <div class="row">
 			    <div class="col-sm-4 wow fadeIn" data-wow-delay="0.4s">
 				    <hr class="line purple">
-				    <h3>Easy Profile Setup</h3>
-				    <p>Sign up using Facebook or Google. Fill out your profile just one time and we'll save your preferences to curate the best restaurants for you.</p>
+				    <h3>1. Set up your profile.</h3>
+				    <!-- <p>Sign up using Facebook or Google. Fill out your profile just once and we'll save your preferences to curate the best restaurants for you.</p> -->
 			    </div>
 			    <div class="col-sm-4 wow fadeIn" data-wow-delay="0.8s">
-				    <hr  class="line blue">
-				    <h3>Painless Decision Making</h3>
-				    <p>You've already filled out a profile, so let us do the rest. Each time you use the app, just pick your prefered spending limit, ETA and the type of meal you're in the mood for.  We pick the best restaurant for you so you don't have to decide. We even recommend a dish to try out.</p>
+				    <hr class="line blue">
+				    <h3>2. When you're ready to go, select your in-the-moment preferences and we'll do the rest.</h3>
+				    <!-- <p>You've already made your profile, so let us do the rest. Each time you use our app, just pick your prefered spending limit, ETA, and the type of meal you're in the mood for and we’ll get you on your way. We’ll even recommend a dish to try.</p> -->
 			    </div>
 			    <div class="col-sm-4 wow fadeIn" data-wow-delay="1.2s">
-				    <hr  class="line yellow">
-				    <h3>Convenient Integrations</h3>
-				    <p>Need a ride? Planning a date? Ordering take-out? Our team has GotchU covered. Conveniently choose between your favorite method of transportation, reserve your spot, and/or simply just sit back, relax, and let the food come to you!</p>
+				    <hr class="line yellow">
+				    <h3>3. Head to your recommended dining location and enjoy!</h3>
+				    <!-- <p>Need a ride? Planning a date? Ordering take-out? Our team has GotchU covered. Conveniently choose between your favorite method of transportation, reserve your spot, and/or simply just sit back, relax, and let the food come to you!</p> -->
 			    </div>
 		    </div>
 	    </div>
@@ -150,7 +150,7 @@
         <div class="row margin-40">
           <div class="col-sm-8 col-sm-offset-2 text-center">
             <h2 class="white">About Us</h2>
-            <p class="white"> We are a team of passionate tech enthusiasts with a love of food. Just like you, we have busy lives with big appetites. Here at GotchU, we understand the value of your time and are dedicated to giving it back to you. That’s why instead of wasting time scouring through endless reviews for the best spot to eat, we’ve GotchU covered so you can get back to what you do best, simply enjoying life!</p>
+            <p class="white"> We are a team of passionate tech enthusiasts with a love for food. Just like you, we have busy lives with big appetites. Here at GotchU, we understand the value of your time and are dedicated to giving it back to you. That’s why instead of wasting time scouring through endless reviews for the best spot to eat, we’ve GotchU covered so you can get back to what you do best, simply enjoying life!</p>
             <p class = "white">We'd love to hear from you! Email us at <a href="mailto:hello@gotchuapp.co">hello@gotchuapp.co</a>
           </div>
         </div>
