editing text in features by adding step in front of numbers

--- a/index.html
+++ b/index.html
@@ -126,18 +126,15 @@
 		    <div class="row">
 			    <div class="col-sm-4 wow fadeIn" data-wow-delay="0.4s">
 				    <hr class="line purple">
-				    <h3>1. Set up your profile.</h3>
-				    <!-- <p>Sign up using Facebook or Google. Fill out your profile just once and we'll save your preferences to curate the best restaurants for you.</p> -->
+				    <h3>Step 1. Set up your profile.</h3>
 			    </div>
 			    <div class="col-sm-4 wow fadeIn" data-wow-delay="0.8s">
 				    <hr class="line blue">
-				    <h3>2. When you're ready to go, select your in-the-moment preferences and we'll do the rest.</h3>
-				    <!-- <p>You've already made your profile, so let us do the rest. Each time you use our app, just pick your prefered spending limit, ETA, and the type of meal you're in the mood for and we’ll get you on your way. We’ll even recommend a dish to try.</p> -->
+				    <h3>Step 2. When you're ready to go, select your in-the-moment preferences and we'll do the rest.</h3>
 			    </div>
 			    <div class="col-sm-4 wow fadeIn" data-wow-delay="1.2s">
 				    <hr class="line yellow">
-				    <h3>3. Head to your recommended dining location and enjoy!</h3>
-				    <!-- <p>Need a ride? Planning a date? Ordering take-out? Our team has GotchU covered. Conveniently choose between your favorite method of transportation, reserve your spot, and/or simply just sit back, relax, and let the food come to you!</p> -->
+				    <h3>Step 3. Head to your recommended dining location and enjoy!</h3>
 			    </div>
 		    </div>
 	    </div>
