changing about us section text to shorter one

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <div class="row margin-40">
           <div class="col-sm-8 col-sm-offset-2 text-center">
             <h2 class="white">About Us</h2>
-            <p class="white"> We are a team of passionate tech enthusiasts with a love for food. Just like you, we have busy lives with big appetites. Here at GotchU, we understand the value of your time and are dedicated to giving it back to you. That’s why instead of wasting time scouring through endless reviews for the best spot to eat, we’ve GotchU covered so you can get back to what you do best, simply enjoying life!</p>
+            <p class="white"> We, like many of you suffer from “hangryness”, caused by our indecisive nature and access to an abundance of information. We make the restaurant selection simple for diners with curated data and learned preferences. Eliminate “hangryness”, save friendships and build stronger relationships… we Gotchu.</p>
             <p class = "white">We'd love to hear from you! Email us at <a href="mailto:hello@gotchuapp.co">hello@gotchuapp.co</a>
           </div>
         </div>
