fixing asterisk in mailchimp form inputs

--- a/index.html
+++ b/index.html
@@ -179,18 +179,18 @@
                       <div id="mc_embed_signup">
                         <form action="//gotchuapp.us15.list-manage.com/subscribe/post?u=16fa93c132fe1d65b6858ea34&amp;id=9ed7fa85c5" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                         <div id="mc_embed_signup_scroll">
-                          <div class="indicates-required"><span class="asterisk"></span>* indicates required</div>
+                          <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
                           <div class="mc-field-group">
                             <label for="mce-EMAIL">Email Address <span class="asterisk">*</span></label>
                             <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
                           </div>
                           <div class="mc-field-group">
-                            <label for="mce-FNAME">First Name <span class="asterisk"></span>
+                            <label for="mce-FNAME">First Name <span class="asterisk">*</span>
                             </label>
                             <input type="text" value="" name="FNAME" class="required" id="mce-FNAME">
                           </div>
                           <div class="mc-field-group">
-                            <label for="mce-LNAME">Last Name <span class="asterisk"></span></label>
+                            <label for="mce-LNAME">Last Name <span class="asterisk">*</span></label>
                             <input type="text" value="" name="LNAME" class="required" id="mce-LNAME">
                           </div>
                           <div id="mce-responses" class="clear">
