capitalizing the solution for indecisive diners

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"><head>
   <meta charset="utf-8">
-  <title>GotchU | the solution for indecisive diners </title>
+  <title>GotchU | The Solution For Indecisive Diners</title>
   <meta name="keywords" content="">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -249,7 +249,7 @@
 
       </div>
     </footer>
-    
+
     <script src="js/modernizr-2.7.1-min.js"></script>
 
   <!-- Google analytics below-->
