--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
 
 
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -46,7 +46,7 @@
           </ul>
         </div><!--/.navbar-collapse -->
       </div>
-    </div>
+    </nav>
 
     <header>
       <div class="container">
