--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
           </div>
         </div>
 
-        <!-- <div class="row margin-30 news-container">
+        <div class="row margin-30 news-container">
           <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 wow fadeInLeft" data-wow-delay="1.2s">
             <a href="http://www.eurekaon.com/fest.html" target="_blank">
             <img class="news-img pull-left" src="img/eureka-fest.png" alt="EurekaFest">
@@ -224,7 +224,7 @@
             <small><em>Eureka Building, Irvine, CA - April 8, 2017</em></small></p>
             </a>
           </div>
-        </div> -->
+        </div>
 
       </div>
     </section>
