--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="css/animate.min.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/main.min.css?v=11">
+  <!-- <link rel="stylesheet" href="css/main.css"> -->
   <!-- Favion -->
   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
   <link rel="icon" href="img/favicon.ico" type="image/x-icon">
@@ -37,13 +38,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <!-- <a class="logo" href="index.html"><img src="img/gotchu-logo.png" alt="Logo"></a> -->
-          <!-- <a class="logo" href="index.html"><img src="img/logo.svg" alt="Logo"></a> -->
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#pricing" class="scroll">ABOUT US</a></li>
-            <!-- <li><a href="#">Sign in</a></li> -->
+            <!-- <li><a href="restauranteurs.html">FOR RESTAURANTEURS</a></li> -->
           </ul>
         </div><!--/.navbar-collapse -->
       </div>
@@ -53,10 +52,10 @@
       <div class="container">
         <div class="row">
           <div class="col-xs-6">
-            <!-- <a href="index.html"><img src="img/logo.svg" alt="Logo"></a> -->
           </div>
           <div class="col-xs-6 signin text-right navbar-nav">
-            <a href="#pricing" class="scroll">ABOUT US</a>&nbsp; &nbsp;<!-- <a href="#">Sign in</a> -->
+            <a href="#pricing" class="scroll">ABOUT US</a>
+            <!-- <a class = "rest-link" href="restauranteurs.html">FOR RESTAURANTEURS</a> -->
           </div>
         </div>
 
@@ -213,6 +212,16 @@
             <p class="black">First Place winners at Startup Weekend Orange County. <br />
             <small><em>Startup Weekend | Hosted by PeopleSpace and We Greenlight, Irvine, CA - February 10 - 12, 2017</em></small></p>
             </a>
+          </div>
+        </div>
+
+        <div class="row margin-30 news-container">
+          <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 wow fadeInLeft" data-wow-delay="0.8s">
+            <a href="https://www.n3xtcon.com/n3xtcon-2017.html" target="_blank">
+            <img class="news-img pull-left" src="img/n3xtcon.png" alt="N3XT CON 2017">
+            <p class="black"> GotchU was selected to participate as one of the top 10 finalists at Pitch.co and N3XT CON 2017. <br/>Pitch.Co is a pitch competition at N3XT CON 2017 that brings together the brightest early-stage startups for a live demonstration and competition.<br/>
+            <small><em>Pitch.co and N3XT CON 2017 | Pasadena, CA - April 2, 2017</em></small></p>
+          </a>
           </div>
         </div>
 
