adding restuarant page and info

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#pricing" class="scroll">ABOUT US</a></li>
-            <!-- <li><a href="restauranteurs.html">FOR RESTAURANTEURS</a></li> -->
+            <li><a class ="rest-link" href="restauranteurs.html">RESTAURATEURS</a></li>
           </ul>
         </div><!--/.navbar-collapse -->
       </div>
@@ -54,8 +54,8 @@
           <div class="col-xs-6">
           </div>
           <div class="col-xs-6 signin text-right navbar-nav">
-            <a href="#pricing" class="scroll">ABOUT US</a>
-            <!-- <a class = "rest-link" href="restauranteurs.html">FOR RESTAURANTEURS</a> -->
+            <a href="#pricing" class="scroll nav-spacing">ABOUT US</a>
+            <a class = "rest-link" href="restauranteurs.html">RESTAURATEURS</a>
           </div>
         </div>
 
@@ -63,9 +63,9 @@
           <div class="col-sm-10 col-sm-offset-1 text-center">
             <!-- <h1 class="wow fadeIn">GotchU</h1> -->
             <img id = "gotchu-logo" src="img/Logo2.svg" alt="Logo">
-            <br />
+            <br/>
             <!-- <p class="lead wow fadeIn" data-wow-delay="0.5s">The easiest way to cure hangryness. We find the best restaurant for you based on your preferences.  <br/> No more scouring through reviews and searching the web. We GotchU!</p> -->
-            <br />
+            <br/>
 
             <div class="row">
               <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1">
@@ -87,7 +87,7 @@
 
     <div class="mouse-icon hidden-xs">
 				<div class="scroll"></div>
-			</div>
+		</div>
 
     <section id="be-the-first" class="pad-xs">
       <div class="container">
@@ -100,13 +100,12 @@
         </div>
 
         <div class="iphone wow fadeInUp" data-wow-delay="1s">
-	        <!-- <img src="img/iphone2.png"> -->
           <iframe class = "gotchu-vid" width="560" height="315" src="https://www.youtube.com/embed/ITPKpdafhX8" frameborder="0" allowfullscreen></iframe>
         </div>
       </div>
     </section>
 
-    <section id="main-info" class="pad-xs">
+    <section class="pad-xs">
 	    <div class="container">
 		    <div class="row">
 			    <div class="col-sm-4 wow fadeIn" data-wow-delay="0.4s">
@@ -133,7 +132,7 @@
           <div class="col-sm-8 col-sm-offset-2 text-center">
             <h2 class="white">About Us</h2>
             <p class="white"> We, like many of you suffer from “hangryness”, caused by our indecisive nature and access to an abundance of information. We make the restaurant selection simple for diners with curated data and learned preferences. Eliminate “hangryness”, save friendships and build stronger relationships… we Gotchu.</p>
-            <p class = "white">We'd love to hear from you! Email us at <a href="mailto:hello@gotchuapp.co">hello@gotchuapp.co</a>
+            <p class = "white">We'd love to hear from you! Email us at <a class = "email-hello" href="mailto:hello@gotchuapp.co">hello@gotchuapp.co</a> or <a class = "email-hello" href="mailto:investors@gotchuapp.co">investors@gotchuapp.co</a></p>
           </div>
         </div>
 
@@ -147,9 +146,9 @@
           <div class="col-sm-8 col-sm-offset-2 text-center">
             <i class="fa fa-envelope-o margin-40"></i>
             <h2 class="black">Hungry for more?</h2>
-            <br />
+            <br/>
             <p class="black">Sign up to get notified when we launch.</p>
-            <br />
+            <br/>
 
             <div class="row">
               <div class="col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
