--- a/restauranteurs.html
+++ b/restauranteurs.html
@@ -17,8 +17,8 @@
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link rel="stylesheet" href="css/animate.min.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
-  <!-- <link rel="stylesheet" href="css/main.min.css?v=11"> -->
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/main.min.css?v=11">
+  <!-- <link rel="stylesheet" href="css/main.css"> -->
   <!-- Favion -->
   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
   <link rel="icon" href="img/favicon.ico" type="image/x-icon">
@@ -32,59 +32,66 @@
   <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="/index.html">HOME</a></li>
-          <li><a href="restauranteurs.html">FOR RESTAURANTEURS</a></li>
+          <li><a href="restauranteurs.html">RESTAURATEURS</a></li>
         </ul>
       </div><!--/.navbar-collapse -->
     </div>
   </nav>
-  <div class="container">
-    <div class="row">
+
+    <div id = "rest-info" class="row">
       <div class="col-xs-6">
       </div>
       <div class="col-xs-6 signin text-right navbar-nav">
         <a href="/index.html">HOME</a>
-        <a class = "rest-link" href="restauranteurs.html">FOR RESTAURANTEURS</a>
       </div>
     </div>
 
-  <section id="be-the-first" class="pad-xs">
+  <section class = "pad-lg-top">
     <div class="container">
       <div class="row">
         <div class="col-sm-8 col-sm-offset-2 text-center margin-30 wow fadeIn" data-wow-delay="0.6s">
-          <h2 class ="video-sum">Restauranteurs, We GotchU too!</h2>
+          <h2 class ="video-sum">Restaurateurs, We GotchU too!</h2>
+          <p class = "lead">At Gotchu, it is our goal to drive customers to restaurants using the power of suggestion. Through our unique algorithm, diners are matched with restaurants based on their individual profile, preferences and current mood.</p>
         </div>
       </div>
-
       <div class="iphone wow fadeInUp pad-bottom" data-wow-delay="1s">
-        <img class = "laptop" src="img/laptop.png">
+        <img class = "laptop" src="img/gotchu-restaurant2.png">
       </div>
     </div>
     </section>
 
-    <section id="main-info" class="pad-xl">
+    <section id="main-info">
       <div class="container">
         <div class="row">
           <div class="col-sm-4 wow fadeIn" data-wow-delay="0.4s">
             <hr class="line purple">
-            <h3>GotchU is a new way to reach new diners. Gain new customers and maintain relationships with loyal diners by informing them about promotions or upcoming happenings.</h3>
+            <h3>Why sign up? </h3>
+            <p>Completed restaurant profiles can help restaurants increase their matching chance with a customer’s search. Signing up with Gotchu is absolutely FREE for restaurants.</p>
           </div>
           <div class="col-sm-4 wow fadeIn" data-wow-delay="0.8s">
             <hr class="line blue">
-            <h3>Customize your restaurant profile and give up to date information from new menu changes to addressing allergy concerns.</h3>
+            <h3>How else can I promote my restaurant?</h3>
+            <p>Become a GotchU Partner! Simply send us promo items or discounts to offer to our users and increase your restaurant exposure through our dining rewards system. </p>
           </div>
           <div class="col-sm-4 wow fadeIn" data-wow-delay="1.2s">
             <hr class="line yellow">
-            <h3>Reviews from diners remain private and can only be accessed by the restauranteur, so you're getting real reviews from real customers. </h3>
+            <h3>Questions?</h3>
+            <p>Interested in learning more about a partnership opportunity? Please contact us at <a class = "email-hello" href="mailto:hello@gotchuapp.co">hello@gotchuapp.co</a> </p>
           </div>
         </div>
       </div>
     </section>
 
-  <footer>
+  <footer class = "footer-pad">
     <div class="container">
 
       <div class="row">
