adding address for peoplespace and instagram widget

--- a/restauranteurs.html
+++ b/restauranteurs.html
@@ -69,7 +69,7 @@
     </div>
     </section>
 
-    <section id="main-info">
+    <section id="main-info" class = "margin-50">
       <div class="container">
         <div class="row">
           <div class="col-sm-4 wow fadeIn" data-wow-delay="0.4s">
@@ -91,22 +91,35 @@
       </div>
     </section>
 
-  <footer class = "footer-pad">
-    <div class="container">
+    <footer class = "footer-pad off-white-bg">
+      <div class="container">
 
-      <div class="row">
-        <div class="col-sm-8 margin-20">
-          <ul class="list-inline social">
-            <li>Connect with us on</li>
-            <li><a href="http://www.twitter.com/_gotchuapp"><i class="fa fa-twitter fa-2x"></i></a></li>
-            <li><a href="http://www.facebook.com/GotchuApp"><i class="fa fa-facebook fa-2x"></i></a></li>
-            <li><a href="http://www.instagram.com/GotchuApp"><i class="fa fa-instagram fa-2x"></i></a></li>
-          </ul>
+        <div class="row">
+          <div class="col-sm-footer">
+            <ul class = "address">
+              <li class = "address-detail"><img class = "peoplespace" src = "img/peoplespace.png" alt = "PeopleSpace"></li>
+              <li class = "address-detail">Part of the Pi-Lab PreAccelerator</li>
+              <li class = "address-detail"><img class = "logo-sm" src = "img/logo-sm.png" alt = "gotchu-logo-small"></li>
+              <li class = "address-detail">1691 Kettering St.</li>
+              <li class = "address-detail">Irvine, CA 92614</li>
+              <li class = "address-detail">hello@gotchuapp.co</li>
+            </ul>
+          </div>
+          <div class="col-sm-footer">
+          <!-- <div class="col-sm-8 margin-20"> -->
+            <ul class="list-inline social">
+              <li class = "address-detail">Connect with us</li>
+              <li><a href="http://www.twitter.com/_gotchuapp"><i class="fa fa-twitter fa-2x"></i></a></li>
+              <li><a href="http://www.facebook.com/GotchuApp"><i class="fa fa-facebook fa-2x"></i></a></li>
+              <li><a href="http://www.instagram.com/GotchuApp"><i class="fa fa-instagram fa-2x"></i></a></li>
+              <!-- LightWidget WIDGET --><script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/dd02f1bf83b65f1a9e25cbba42ce0102.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 60%; border: 0; overflow: hidden;"></iframe>
+
+            </ul>
+          </div>
         </div>
-      </div>
 
-    </div>
-  </footer>
+      </div>
+    </footer>
 
   <script src="js/modernizr-2.7.1-min.js"></script>
 
