--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link rel="stylesheet" href="css/animate.min.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/main.min.css?v=11">
+  <link rel="stylesheet" href="css/main.min.css">
   <!-- <link rel="stylesheet" href="css/main.css"> -->
   <!-- Favion -->
   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
