editing email mail to for footer

--- a/restauranteurs.html
+++ b/restauranteurs.html
@@ -102,7 +102,7 @@
               <li class = "address-detail"><img class = "logo-sm" src = "img/logo-sm.png" alt = "gotchu-logo-small"></li>
               <li class = "address-detail">1691 Kettering St.</li>
               <li class = "address-detail">Irvine, CA 92614</li>
-              <li class = "address-detail">hello@gotchuapp.co</li>
+              <li class = "address-detail"><a class="email-hello" href="mailto:hello@gotchuapp.co">hello@gotchuapp.co</a></li>
             </ul>
           </div>
           <div class="col-sm-footer">
