adding new privacy policy

--- a/index.html
+++ b/index.html
@@ -260,10 +260,10 @@
               <li><a href="http://www.facebook.com/GotchuApp"><i class="fa fa-facebook fa-2x"></i></a></li>
               <li><a href="http://www.instagram.com/GotchuApp"><i class="fa fa-instagram fa-2x"></i></a></li>
               <!-- LightWidget WIDGET --><script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/dd02f1bf83b65f1a9e25cbba42ce0102.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 60%; border: 0; overflow: hidden;"></iframe>
-
             </ul>
           </div>
         </div>
+        <a href="//www.iubenda.com/privacy-policy/8117737" class="iubenda-black iubenda-embed" title="Privacy Policy">Privacy Policy</a><script type="text/javascript">(function (w,d) {var loader = function () {var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src = "//cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s,tag);}; if(w.addEventListener){w.addEventListener("load", loader, false);}else if(w.attachEvent){w.attachEvent("onload", loader);}else{w.onload = loader;}})(window, document);</script>
 
       </div>
     </footer>
