--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 
   </script>
   <!--- Google analytics Vivian below -->
-  <script>
+  <!-- <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -291,7 +291,7 @@
   ga('create', 'UA-99776224-1', 'auto');
   ga('send', 'pageview');
 
-</script>
+</script> -->
 
   <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'>
                     </script>
